--- a/GuiaUsoLibreria/Views/Shared/_Layout.cshtml
+++ b/GuiaUsoLibreria/Views/Shared/_Layout.cshtml
@@ -58,12 +58,12 @@
 <body>
     <!-- Menú lateral -->
     <div class="sidebar">
-        <h2 style="text-align: center;">Menú</h2>
-        <a href="#instalacion">Instalación</a>
-        <a href="#configuracion">Configuración Inicial</a>
-        <a href="#caso1">Caso de Uso: Enviar un Mensaje</a>
-        <a href="#caso2">Caso de Uso: Recibir Mensajes</a>
-        <a href="#errores">Manejo de Errores</a>
+        <h2 style="text-align: center;">Contenido</h2>
+        <a href="~/Home/Index">Instalación</a>
+        <a href="~/Home/EntradaDatos">Entrada de Datos</a>
+        <a href="~/Home/Archivos">Archivos</a>
+        <a href="~/Home/Criptografia">Criptografía</a>
+        <a href="#">Versionamiento</a>
     </div>
 
 
