--- a/GuiaUsoLibreria/Views/Home/Privacy.cshtml
+++ b/GuiaUsoLibreria/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1> prueba
+<h1>@ViewData["Title"]</h1> prueba 2
 
 <p>Use this page to detail your site's privacy policy.</p>
