--- a/GuiaUsoLibreria/Views/Shared/_Layout.cshtml
+++ b/GuiaUsoLibreria/Views/Shared/_Layout.cshtml
@@ -61,9 +61,10 @@
         <h2 style="text-align: center;">Contenido</h2>
         <a href="~/Home/Index">Instalación</a>
         <a href="~/Home/EntradaDatos">Entrada de Datos</a>
+        <a href="~/Home/Middleware">Middleware Sanitización</a>
         <a href="~/Home/Archivos">Archivos</a>
         <a href="~/Home/Criptografia">Criptografía</a>
-        <a href="#">Versionamiento</a>
+        <a href="~/Home/Versionamiento">Versionamiento</a>
     </div>
 
 
