--- a/GuiaUsoLibreria/Views/Home/Middleware.cshtml
+++ b/GuiaUsoLibreria/Views/Home/Middleware.cshtml
@@ -50,8 +50,8 @@
         <pre><code class="language-csharp">
 using DSLibreria;
 
-app.UseMiddleware<HtmlSanitizationMiddleware>();
-app.UseMiddleware<HtmlSanitizationMiddlewareEntrada>();
+app.UseMiddleware&lt;HtmlSanitizationMiddleware&gt;();
+app.UseMiddleware&lt;HtmlSanitizationMiddlewareEntrada&gt;();
 
             </code></pre>
     </section>
